--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <table style="width:100%;min-height:80%;"><tr><td align="center">
 <center><h1>6.831 Sudokui</h1>
-<p style="margin-top:0">Your task: solve puzzles #1-#5 or more.<br><br>Use your mouse, arrow keys, or WASD keys to select a square.<br>Then use the keyboard to enter a number!</p>
+<p style="margin-top:0">Your task: solve puzzles #1-#5 or more.<br><br>Use your mouse or arrow keys keys to select a square.<br>Then use the keyboard to enter a number!</p>
 </center>
 
 <center style="display:table-cell;vertical-align:middle;">
@@ -58,9 +58,7 @@
 <p>In this experiment, you will solve mini Sudoku puzzles.
 <p>The rules of Sudoku are to fill in all the digits so that no duplicates
 appear in any row, column or bold-bordered square.
-<p>This version of the interface uses the mouse.
-To write a number, click on a handwritten number on the side,
-then click on a square.  Click Next to go to the next puzle.
+<p>Click Next to go to the next puzle.
 <p>Practice on puzzle #1. Then starting with puzzle #2,
 solve as many puzzles as quickly and correctly as you can.</div>
 </td></tr>
